fixed wishlist alignment

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,6 @@ h4 {
   border-radius: 8px;
   background-color: #e85a71;
   color: white;
-  margin: 0 1rem;
 }
 
 .btn--red:hover {
